[package]
name = "rust-ws"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
tokio = { version = "1.37", features = ["full"] }
warp = "0.3"
thiserror = "1.0"